--- a/MyMV/app/src/main/res/values/strings.xml
+++ b/MyMV/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="manage_vehicle_type_text">Type:</string>
     <string name="manage_vehicle_manufacturer_text">Manufacturer:</string>
     <string name="manage_vehicle_model_text">Model:</string>
+    <string name="manage_vehicle_update_button_text">update</string>
 </resources>
