added history table

--- a/MyMV/app/src/main/res/values/strings.xml
+++ b/MyMV/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="manage_vehicle_manufacturer_text">Manufacturer:</string>
     <string name="manage_vehicle_model_text">Model:</string>
     <string name="manage_vehicle_update_button_text">update</string>
+    <string name="vehicle_owner_text">Owner:</string>
+    <string name="vehicle_production_year_text">Production year:</string>
+    <string name="vehicle_previous_owners_text">Previous owners:</string>
 </resources>
