added another field in history table

--- a/MyMV/app/src/main/res/values/strings.xml
+++ b/MyMV/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="vehicle_production_year_text">Production year:</string>
     <string name="vehicle_previous_owners_text">Previous owners:</string>
     <string name="manage_vehicle_delete_button_text">delete</string>
+    <string name="vehicle_kilometerage_text">Kilometerage:</string>
 </resources>
