added oil table

--- a/MyMV/app/src/main/res/values/strings.xml
+++ b/MyMV/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="vehicle_previous_owners_text">Previous owners:</string>
     <string name="manage_vehicle_delete_button_text">delete</string>
     <string name="vehicle_kilometerage_text">Kilometerage:</string>
+    <string name="vehicle_last_oil_change_text">Last oil change:</string>
+    <string name="vehicle_next_oil_change_text">Next oil change at:</string>
 </resources>
